chore: initial commit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ rust-version = "1.90.0"
 authors = [
     "anton.velichko@me.com",
 ]
-license = "MIT"
-repository = "https://github.com/outbe/outbe-transaction-fingerprinting"
+license = "GPL-3.0-only"
+repository = "https://github.com/psobn/pso-transaction-fingerprinting"
 
 [profile.release]
 opt-level = 3
