--- a/examples/cra-fingerprint-config/agent-1.conf
+++ b/examples/cra-fingerprint-config/agent-1.conf
@@ -9,6 +9,11 @@
     port: 9001
   }
 
+  management-grpc: {
+    host: "[::]"
+    port: 9901
+  }
+
   fingerprint-service: {
     type: Cooperative
 
