--- a/examples/t3s5-config/agent-2.conf
+++ b/examples/t3s5-config/agent-2.conf
@@ -3,6 +3,12 @@
     host: "[::]"
     port: 9002
   }
+
+  management-grpc: {
+    host: "[::]"
+    port: 9901
+  }
+
   agent: {
     agent_id: 2
     secret_shard: CBvxVKszXcLMVP5qTyB85zVx1FK71yQ9vgqDpuXhnXPi
