--- a/examples/t3s5-config/agent-3.conf
+++ b/examples/t3s5-config/agent-3.conf
@@ -3,6 +3,12 @@
     host: "[::]"
     port: 9003
   }
+
+  management-grpc: {
+    host: "[::]"
+    port: 9901
+  }
+
   agent: {
     agent_id: 3
     secret_shard: HUgDcACRCTdMtQ6iwgAe1VsXx2M6ChrDajJTVw7rc39e
