--- a/examples/t3s5-config/agent-4.conf
+++ b/examples/t3s5-config/agent-4.conf
@@ -3,6 +3,12 @@
     host: "[::]"
     port: 9004
   }
+
+  management-grpc: {
+    host: "[::]"
+    port: 9901
+  }
+
   agent: {
     agent_id: 4
     secret_shard: XugsmnUMuNCRio3LghH8YdJVFmtN3NzFCJxqoHvMfHs
