--- a/examples/t3s5-config/agent-5.conf
+++ b/examples/t3s5-config/agent-5.conf
@@ -3,6 +3,12 @@
     host: "[::]"
     port: 9005
   }
+
+  management-grpc: {
+    host: "[::]"
+    port: 9901
+  }
+
   agent: {
     agent_id: 5
     secret_shard: FugMM3q4yngpeCvZ7a6BqVXMGLVYLiBTLSygEdxJ2dg4
