--- a/examples/docker/config/agent.conf
+++ b/examples/docker/config/agent.conf
@@ -7,6 +7,12 @@
     host: "[::]"
     port: 9001
   }
+
+  management-grpc: {
+    host: "[::]"
+    port: 9901
+  }
+
   fingerprint-service: {
     type: Naive
     secret: "6hDkQUcrkMKWfjofiFAF3AAt4gBNEAtdyggeLxDVXyux"
